--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,11 +1,8 @@
 name: Build and Publish Docker Image
 
 on:
-  push:
-    branches: [ "main", "master" ]
-    tags: [ "v*.*.*" ]
-  pull_request:
-    branches: [ "main", "master" ]
+  release:
+    types: [published]
 
 permissions:
   contents: read
